# py3d

./: .gitignore  CMakeLists.txt  setup.py  test.py
data/: out.off  out1.ply
src/core/: cuda_utils.h  utils.h
wrapper/arap/: CMakeLists.txt  arap.cpp  arap.h  arap_cpu.cpp  bindings.cpp  main.cu
wrapper/cgal/: CMakeLists.txt  bindings.cpp  intersection.cpp  intersection.h  main.cpp  utils.cpp  utils.h
wrapper/smooth/: CMakeLists.txt  bindings.cpp  laplacian_smoothing.cpp  laplacian_smoothing.h  laplacian_smoothing_cpu.cpp  main.cu
